--- a/data/build.gradle
+++ b/data/build.gradle
@@ -50,7 +50,8 @@ dependencies {
     api 'com.squareup.okhttp3:logging-interceptor:4.1.1'
 
     implementation 'androidx.room:room-runtime:2.1.0'
-    annotationProcessor 'androidx.room:room-compiler:2.1.0'
+    implementation 'androidx.room:room-rxjava2:2.2.0-rc01'
+    kapt 'androidx.room:room-compiler:2.1.0'
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'androidx.test.ext:junit:1.1.1'
