--- a/data/build.gradle
+++ b/data/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.1.0'
     implementation 'androidx.room:room-rxjava2:2.2.0-rc01'
     kapt 'androidx.room:room-compiler:2.1.0'
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'androidx.test.ext:junit:1.1.1'
