--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,13 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "SERVER_URL", '"https://api.myjson.com/"'
+        }
+        debug {
+            minifyEnabled false
+            buildConfigField "String", "SERVER_URL", '"https://api.myjson.com/"'
         }
     }
     compileOptions {
