--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -8,6 +8,7 @@ ext {
     androidxVersion = '1.1.0'
     constraintLayoutVersion = '1.1.3'
     cardViewRecyclerviewVersion = '1.0.0'
+    multidexVersion = '2.0.1'
     koinVersion = '2.0.1'
     navigationVersion = '2.1.0'
     rxJavaVersion = '2.2.12'
@@ -23,4 +24,5 @@ ext {
     androidxJunitVersion = '1.1.1'
     testRunnerVersion = '1.2.0'
     espressoVersion = '3.2.0'
+    mockitoVersion = '3.0.0'
 }
